# simulation

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build_log.txt  imgui.ini  main.cpp
shaders/: basic.frag  basic.vert
src/: main.cpp
src/core/: Application.cpp  Application.hpp  FileFinder.cpp  FileFinder.hpp  Grid2D.cpp  Grid2D.hpp  InputManager.cpp  InputManager.hpp  Rules.cpp  Rules.hpp  Simulator.cpp  Simulator.hpp  Stats.cpp  Stats.hpp
src/engine/: Window.cpp  Window.hpp
src/model/: Model.cpp  Model.hpp
src/renderer/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UI.cpp  UI.hpp
